<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.cmsc434.adi.doodle.Settings">

    <TextView
        android:text="@string/brush_size"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/brush_seek_bar"
        android:max="@integer/max_brush_size"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.96"/>

    <TextView
        android:text="@string/opacity"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/opacity_seek_bar"
        android:max="@integer/max_opacity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.96" />

    <TextView
        android:text="@string/red"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/red_seek_bar"
        android:max="@integer/max_color"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.96" />

    <TextView
        android:text="@string/green"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/green_seek_bar"
        android:max="@integer/max_color"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.96" />

    <TextView
        android:text="@string/blue"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/blue_seek_bar"
        android:max="@integer/max_color"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.96" />

    <TextView
        android:text="Brush Preview"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.cmsc434.adi.doodle.BrushPreviewView
        android:id="@+id/brush_preview_view"
        android:layout_height="@dimen/max_brush_dimen"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:background="#FFFFFFFF"
        android:layout_width="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/close"
        android:layout_gravity="center"
        android:onClick="onClickClose"/>

</LinearLayout>
