<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00660000"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.cmsc434.adi.doodle.ScribbleView
        android:id="@+id/scribble"
        android:layout_width="match_parent"
        android:background="#FFFFFFFF"
        android:layout_weight="0.96"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/undo"
            android:onClick="onClickUndoPath"
            android:id="@+id/undo_btn" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/redo"
            android:onClick="onClickRedoPath"
            android:id="@+id/redo_btn" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/settings"
            android:onClick="onClickSettings"
            android:id="@+id/settings_btn" />

    </LinearLayout>

</LinearLayout>